--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a class="nav-link scrollto" href="#team">Time</a></li>
 
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
-          <li><a  href="https://docs.google.com/document/d/1TBn0QeePrrbOf8A8P955Y2Md5XAHalVyKT9IvHCSrYY/edit?usp=sharing" target="_blank" >Whitepaper</a></li>
+          <li><a  href="https://docs.google.com/document/d/1bhsdmMKnCNI2X7A4BLIofimM8-kScv4YlIFprzdJcyA/edit" target="_blank" >Whitepaper</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -92,7 +92,7 @@
                 dos riscos e ganhos de ativos financeiros (CryptoJogos, ArtesNFT, DayTrade, etc). 
                 
               </p>
-              <a href="https://docs.google.com/document/d/1TBn0QeePrrbOf8A8P955Y2Md5XAHalVyKT9IvHCSrYY/edit?usp=sharing" target="_blank" class="about-btn">Whitepaper<i class="bx bx-chevron-right"></i></a>
+              <a href="https://docs.google.com/document/d/1bhsdmMKnCNI2X7A4BLIofimM8-kScv4YlIFprzdJcyA/edit" target="_blank" class="about-btn">Whitepaper<i class="bx bx-chevron-right"></i></a>
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
